syntax = "proto3";

package points;
option go_package = "./pb";

message AddPointsReq{
  int64 user_id = 1;
  int32 user_points = 2;
  int64 request_id = 3;
  int32 add_points = 4;
}

message AddPointsResp {
  bool success = 1;
  string message = 2;
}

message DecPointsReq{
  int64 user_id = 1;
  int32 user_points = 2;
  int64 request_id = 3;
  int32 dec_points = 4;
}

message DecPointsResp{
  bool success = 1;
  string message = 2;
}

service PointsService {
  rpc AddPoints(AddPointsReq) returns (AddPointsResp);
  rpc DecPoints(DecPointsReq) returns (DecPointsResp);
}
